scrollbar et description fixe

--- a/css/project.css
+++ b/css/project.css
@@ -13,6 +13,10 @@ h1 {
   font-weight: bold;
 }
 
+h3 {
+  margin-bottom: 5px;
+}
+
 ul {
   list-style-type: none;
   display: inline-block;
@@ -43,6 +47,36 @@ ul li {
 ul li:hover {
   background:#46bec7
 }
+
+/* Description de projet et scroll bar */
+#description{
+  width:207px;
+  height: 80px;
+  background-color:#286d7200;
+  overflow-y: scroll;
+  margin: 5px;
+}
+
+#description::-webkit-scrollbar {
+  width: 14px;
+  height: 18px;
+}
+#description::-webkit-scrollbar-thumb {
+  height: 6px;
+  border: 3px solid rgba(0, 0, 0, 0);
+  background-clip: padding-box;
+  border-radius: 7px;
+  background-color: #ffffff73;
+}
+#description::-webkit-scrollbar-button {
+  width: 0;
+  height: 0;
+  display: none;
+}
+#description::-webkit-scrollbar-corner {
+  background-color: transparent;
+}
+
 
 
 /*Création de projet - Affichage du formulaire*/
